--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tide-api",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Utility intended to easily consume a rest api in javascript projects",
   "main": "dist/index.js",
   "scripts": {
-    "webpack": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -13,7 +13,8 @@
   },
   "keywords": [
     "api",
-    "rest"
+    "rest",
+    "consumer"
   ],
   "author": "Mark Ehrlich",
   "license": "MIT",
@@ -26,6 +27,10 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
+    "fetch-mock": "^7.3.7",
+    "jest": "^24.8.0",
+    "nock": "^10.0.6",
+    "node-fetch": "^2.6.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   },
