--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
         "@babel/preset-env": "^7.8.4",
         "babel-loader": "^8.0.6",
         "fetch-mock": "^7.7.3",
-        "jest": "^24.9.0",
+        "jest": "^25.5.4",
         "nock": "^10.0.6",
         "node-fetch": "^2.6.0",
+        "redux": "^4.0.5",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10"
     },
