--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dependencies": {
         "js-md5": "^0.7.3",
         "qs": "^6.9.1",
-        "url-join": "^4.0.1"
+        "url-join": "^4.0.1",
+        "whatwg-fetch": "^3.2.0"
     }
 }
